# arm_emu_v8a

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_arm_emu.cpp
Common/cmake/build-imgui/: CMakeLists.txt
Common/cmake/build-imgui-filedialog/: CMakeLists.txt
arm_emu/: CMakeLists.txt
arm_emu/Private/Application/: Application.cpp
arm_emu/Private/Drawable/: AssemblyNode.cpp  CPUSettingsNode.cpp  CodeControlNode.cpp  CodeInputNode.cpp  ProgramStateNode.cpp  WindowNode.cpp
arm_emu/Private/Entry/: main.cpp
arm_emu/Private/Event/: AppEvent.cpp  CPUEvent.cpp  CompilerEvent.cpp  ControlEvent.cpp  EventQueue.cpp  EventQueue.h  InputEvent.cpp  ProgramEvent.cpp
arm_emu/Private/Window/: Window.cpp
arm_emu/Public/: INode.h
arm_emu/Public/Application/: Application.h
arm_emu/Public/Drawable/: AssemblyNode.h  CPUSettingsNode.h  CodeControlNode.h  CodeInputNode.h  INode.h  ProgramStateNode.h  WindowNode.h
arm_emu/Public/Event/: AppEvent.h  CPUEvent.h  CompilerEvent.h  ControlEvent.h  EventCategory.h  EventHandler.h  EventType.h  IEvent.h  InputEvent.h  KeyEvent.h  ProgramEvent.h
arm_emu/Public/Window/: Window.h  WindowProperties.h
arm_emu_decodes_lib/: CMakeLists.txt
arm_emu_decodes_lib/Private/DebugUtils/: LogType.cpp  Logger.cpp
arm_emu_decodes_lib/Private/Instruction/: Instruction.h
arm_emu_decodes_lib/Private/InstructionSet/: A64InstructionSet.h
arm_emu_decodes_lib/Private/InstructionSet/Decodes/: BranchExceptionSystem.cpp  BranchExceptionSystem.h  DataProcessingImmediate.cpp  DataProcessingImmediate.h  DataProcessingRegister.cpp  DataProcessingRegister.h  DataProcessingScalarFloatingPointAdvancesSIMD.cpp  DataProcessingScalarFloatingPointAdvancesSIMD.h  DecodeGroup.cpp  DecodeGroup.h  Decodes.cpp  GenEnumChars.py  LoadStore.cpp  LoadStore.h  Reserved.cpp  Reserved.h
arm_emu_decodes_lib/Public/DebugUtils/: Clock.h  Log.h  LogType.h  Logger.h  Object.h
arm_emu_lib/: CMakeLists.txt
arm_emu_lib/Boost/boost/dynamic_bitset/: dynamic_bitset.hpp
arm_emu_lib/Private/Allocation/: MemoryResource.cpp  MemoryResource.h  MemoryResourceProbe.cpp  MemoryResourceProbe.h
arm_emu_lib/Private/CPU/: A64CPU.cpp  A64CPU.h  SystemCreator.cpp
arm_emu_lib/Private/Core/: A64Core.cpp  A64Core.h  ICore.h
arm_emu_lib/Private/DebugUtils/: Clock.h  LogType.cpp  LogType.h  Logger.cpp  Logger.h  Object.h
arm_emu_lib/Private/Interrupt/: Interrupt.cpp  Interrupt.h
arm_emu_lib/Private/Memory/: CacheMemory.cpp  CacheMemory.h  ICacheMemory.h  IMemory.h  MemoryManagementUnit.cpp  MemoryManagementUnit.h  MemoryManagementUnitProxy.cpp  MemoryManagementUnitProxy.h  MemoryWatcher.cpp  MemoryWatcher.h  ProgramMemory.cpp  RandomAccessMemory.cpp  RandomAccessMemory.h
arm_emu_lib/Private/Module/: A64Module.cpp  A64Module.h  IModule.h
arm_emu_lib/Private/ProcessingUnit/: A64ProcessingUnit.cpp  A64ProcessingUnit.h  A64ProcessingUnitWatcher.cpp  A64ProcessingUnitWatcher.h  IProcessingUnit.h  IProcessingUnitWatcher.h
arm_emu_lib/Private/ProcessingUnit/A64Instruction/: Instruction.h
arm_emu_lib/Private/ProcessingUnit/A64InstructionHandler/: A64InstructionHandler.cpp  A64InstructionHandler.h
arm_emu_lib/Private/ProcessingUnit/A64InstructionManager/: A64InstructionManager.cpp  A64InstructionManager.h
arm_emu_lib/Private/ProcessingUnit/A64InstructionSet/: A64InstructionSet.h
arm_emu_lib/Private/ProcessingUnit/A64InstructionSet/Decodes/: BranchExceptionSystem.cpp  BranchExceptionSystem.h  DataProcessingImmediate.cpp  DataProcessingImmediate.h  DataProcessingRegister.cpp  DataProcessingRegister.h  DataProcessingScalarFloatingPointAdvancesSIMD.cpp  DataProcessingScalarFloatingPointAdvancesSIMD.h  DecodeGroup.cpp  DecodeGroup.h  LoadStore.cpp  LoadStore.h  Reserved.cpp  Reserved.h
arm_emu_lib/Private/ProcessingUnit/A64Registers/: GeneralRegisters.h  SystemRegisters.h
arm_emu_lib/Private/ProcessingUnit/Enums/: AbortMode.h  AccessType.h  ArchitectureProfile.h  BranchType.h  ConditionCode.h  Constraint.h  Exception.h  ExceptionLevel.h  ExtendType.h  Extension.h  ExtensionVersion.h  Feature.h  InstructionSet.h  RoundingMode.h  SecurityState.h  SelectedStackPointer.h  ShiftType.h  WidthOption.h
arm_emu_lib/Private/ProcessingUnit/InstructionCodeImpl/SharedOperations/: SharedOperations.h
arm_emu_lib/Private/ProcessingUnit/Structs/: ExceptionRecord.h  ProcessState.h
arm_emu_lib/Private/Program/: ControlledResult.cpp  IResult.cpp  IResultImpl.h  Program.cpp  Result.cpp  ResultElement.cpp  ResultElement.h
arm_emu_lib/Private/Utility/: Bitset.cpp  Bitset.h  Singleton.h  StreamableEnum.h  Utilities.h
arm_emu_lib/Public/API/: Api.h
arm_emu_lib/Public/CPU/: CPUType.h  ICPU.h  SystemCreator.h  SystemSettings.h
arm_emu_lib/Public/DebugUtils/: LogLevel.h  LogType.h  Logger.h
arm_emu_lib/Public/Memory/: DataUnit.h  IMemory.h  MemoryUnits.h  ProgramMemory.h
arm_emu_lib/Public/Program/: ControlledResult.h  IResult.h  Program.h  Result.h
arm_emu_lib/Public/Utility/: EnumBitfield.h  UniqueRef.h
arm_emu_lib_test/: CMakeLists.txt  arm_emu_lib_test.cpp  main.cpp
arm_emu_lib_test/Tests/Allocation/: MemoryResourceProbeTest.cpp  MemoryResourceProbeTest.h
arm_emu_lib_test/Tests/Program/: ResultTest.cpp  ResultTest.h  SampleProgramTest.cpp  SampleProgramTest.h
compilation_lib/: CMakeLists.txt
compilation_lib/Private/Compiler/: Compiler.cpp
compilation_lib/Private/Compiler/Options/: CppStandard.cpp  OptimizationLevel.cpp  WarningOptions.cpp
compilation_lib/Private/ELFReader/: ELFReader.cpp
compilation_lib/Private/ELFReader/Entries/: BaseEntry.cpp  FileHeader.cpp  RelocationAddendEntry.cpp  RelocationEntry.cpp  SectionHeader.cpp  SymbolTableEntry.cpp
compilation_lib/Public/Compiler/: Compiler.h
compilation_lib/Public/Compiler/Options/: CppStandard.h  OptimizationLevel.h  WarningOptions.h
compilation_lib/Public/ELFReader/: ELFFile.h  ELFReader.h
compilation_lib/Public/ELFReader/Entries/: BaseEntry.h  FileHeader.h  RelocationAddendEntry.h  RelocationEntry.h  SectionHeader.h  SymbolTableEntry.h
compilation_lib_test/: CMakeLists.txt  main.cpp
(+100 files in other folders)
